# ollama-file-find

./: Cargo.toml  README.md
src/: args.rs  lib.rs  main.rs  models.rs
src/ollama-file-find-inner/: Cargo.toml  README.md
src/ollama-file-find-inner/src/: lib.rs  media_type.rs  models.rs  scan_args.rs
