[package]
name = "ollama-file-find-cli"
version = "0.1.1"
edition = "2024"
license = "MIT"
description = "A command-line interface for the Ollama file find library."

[dependencies]
ollama-file-find = { path = "src/ollama-file-find-inner", version = "0.1.0"}
anyhow = "1.0.99"
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
