[package]
name = "ollama-file-find-cli"
version = "0.1.4"
edition = "2024"
license = "MIT"
description = "A command-line interface for the Ollama file find library."
repository = "https://github.com/Exotik850/ollama-file-find"

[workspace]
members = ["src/ollama-file-find-inner"]

[dependencies]
ollama-file-find = { path = "src/ollama-file-find-inner", version = "0.1.4"}
anyhow = "1.0.99"
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
