[package]
name = "ollama-file-find"
version = "0.1.5"
edition = "2024"
license = "MIT"
description = "A library for Ollama model file inspection and discovery."
repository = "https://github.com/Exotik850/ollama-file-find"

[dependencies]
dirs = "6.0.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.5.0"
thiserror = "2.0.14"
mime = "0.3.17"
